[register] fix button overlap

--- a/Frontend/src/app/register/register.component.scss
+++ b/Frontend/src/app/register/register.component.scss
@@ -7,6 +7,11 @@ mat-toolbar {
     height: 100%;
     color: black;
   }
+  #headline {
+    text-align: center;
+    padding-right: 55px;
+    white-space: normal;
+  }
 }
 
 #card {
